# api/swagger/swagger.yaml
@@ -1,11 +1,11 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Sistemas Integrados de Gestão Empresarial 
+  title: Sistemas Integrados de Gestão Empresarial (API Recursos Humanos) 
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
-basePath: /
+basePath: /docs
 # 
 schemes:
   # tip: remove http to make production-grade
@@ -18,6 +18,40 @@ consumes:
 produces:
   - application/json
 paths:
+  /employee/{employeeId}:
+    x-swagger-router-controller: employee
+    get:
+      description: Returns employee to the caller
+      operationId: employee
+      parameters:
+        - name: employeeId
+          in: path
+          type: integer
+          required: true
+          description: Numeric ID of the employee to get.
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/EmployeeResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /employee:
+    x-swagger-router-controller: employees
+    get:
+      description: Returns employees to the caller
+      operationId: employees
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/EmployeesResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /hello:
     # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
@@ -46,6 +80,141 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
+  EmployeesResponse:
+    type: array
+    description: The employees.  
+    items:
+      type: object
+      description: The employee.  
+      properties:
+        id:
+          type: integer
+          description: The employee ID.
+        guid:
+          type: string
+          description: The employee guid.
+        isAllocated:
+          type: string
+          description: The employee availability.
+        salary:
+          type: string
+          description: The employee salary.
+        picture:
+          type: string
+          description: The employee picture.
+        age:
+          type: string
+          description: The employee age.
+        specialty:
+          type: string
+          description: The employee specialty.
+        name:
+          type: object
+          description: The employee full name.
+          properties:
+            first:          
+              type: string
+              description: The employee first name.
+            last:          
+              type: string
+              description: The employee last name.
+        company:
+          type: string
+          description: The employee current company/project.
+        phone:
+          type: string
+          description: The employee phone.
+        address:
+          type: string
+          description: The employee address.
+        about:
+          type: string
+          description: The employee about.
+        registered:
+          type: string
+          description: The date when employee was registered.
+        skills:
+          type: array
+          description: The employee skills.
+          item:
+            type: object
+            description: The employee skill.
+            properties:
+              id:
+                type: integer
+                description: The skill ID.
+              name:
+                type: string
+                description: The skill name.
+              level:
+                type: integer
+                description: The skill level.
+  EmployeeResponse:
+    type: object
+    description: The employee.
+    properties:
+      id:
+        type: integer
+        description: The employee ID.
+      guid:
+        type: string
+        description: The employee guid.
+      isAllocated:
+        type: string
+        description: The employee availability.
+      salary:
+        type: string
+        description: The employee salary.
+      picture:
+        type: string
+        description: The employee picture.
+      age:
+        type: string
+        description: The employee age.
+      specialty:
+        type: string
+        description: The employee specialty.
+      name:
+        type: object
+        description: The employee full name.
+        properties:
+          first:          
+            type: string
+            description: he employee first name.
+          last:          
+            type: string
+            description: The employee last name.
+      company:
+        type: string
+        description: The employee current company/project.
+      phone:
+        type: string
+        description: The employee phone.
+      address:
+        type: string
+        description: The employee address.
+      about:
+        type: string
+        description: The employee about.
+      registered:
+        type: string
+        description: The date when employee was registered.
+      skills:
+        type: array
+        description: The employee skills.
+        items:
+          type: object
+          description: The employee skill.
+          properties:
+            id:
+              type: integer
+              description: The skill ID.
+            name:
+              type: string
+              description: The skill name.
+            level:
+              type: integer
+              description: The skill level.
   HelloWorldResponse:
     required:
       - message
